# Crack_ncm

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
