[package]
name = "decrypt_ncm"
version = "0.1.0"
authors = ["TENX <coldswind@pm.me>"]
edition = "2018"
description = "convert encrypted ncm file to original music file."
homepage = "https://github.com/TENX-S/Rust-Toy"
repository = "https://github.com/TENX-S/Rust-Toy"
license = "MIT"
readme = "README.md"
keywords = ["ncm", "converter",]

[dependencies]

aes = "0.3.2"
id3 = "0.5.0"
glob = "0.3.0"
rayon = "1.3.1"
base64 = "0.11.0"
metaflac = "0.2.2"
num_cpus = "1.13.0"
miniserde = "0.1.12"
block-modes = "0.3.3"
